# SH-cross-frame

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main_CLI.cpp
cmake/: Dependencies.cmake  Eigen3.cmake  Geogram.cmake  blas.cmake  lapack.cmake
data/: s07u_notch.mesh
src/: CMakeLists.txt
src/SH-cross-frame/: CMakeLists.txt  frame3d.cc  frame3d.hh
src/SH-cross-frame/kt84/graphics/: graphics_util.hh
src/SH-cross-frame/kt84/openvolumemesh/base/: EdgeLength.hh  TetCellVolume.hh  TetFaceArea.hh  TetFaceNormal.hh  TetrahedralMesh.hh  Utility.hh
src/utils/: log.h  parse_filepath.h  throw_error.h
tests/: CMakeLists.txt  environment_geogram.h  environment_spdlog.h  main.cpp  test_deps_geogram.cpp  test_deps_spdlog.cpp  test_simple.cc  test_tetmesh.cc  utils.h
